fix header accordion mobile third

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -235,6 +235,9 @@
 						width: 1.25rem;
 						display: inline-flex;
 					}
+					.accordion-button{
+						padding: 0 !important;
+					}
 				}
 			}
 		}
